anypoint-connector-devkit/v/3.6/packaging-your-connector-for-release.adoc
= 打包发布的连接器
:keywords: devkit, connector, packaging, documenting use cases, readme

当您的连接器准备好向广大用户发布时，请采取以下额外步骤以确保用户成功：

* 为您的连接器创建许可协议。
* 开发端到端的演练以说明如何使用连接器执行常见用例。
* 创建一个用于分发的压缩文件。

== 先决条件

本文假定您有：

* 开发您的连接器
* 记录它们以准备发布。 <<Documenting With Use Cases>>中提供了关于记录连接器的更多信息。
* 完成测试，如 link:/anypoint-connector-devkit/v/3.6/developing-devkit-connector-tests[开发DevKit连接器测试]中所述。

== 自定义许可协议

在连接器安装期间，Studio向您提供许可协议。您可以自定义此协议的内容以反映您的条款以及您想要的连接器许可证的措辞。

在构建过程中，Maven首先在与`pom.xml`文件相同的目录中搜索`LICENSE.md`文件。

如果找不到该文件，Maven将执行以下步骤来查找许可协议：

.  Maven检查与`pom.xml`文件位于同一目录中的`LICENSE.txt`文件。
. 如果`pom.xml`文件包含*Licenses*部分（如 http://maven.apache.org/pom.html#Licenses[Maven文档]中所述），则DevKit会尝试从许可证的URL下载文本，然后保存下载的内容作为新的`LICENSE.md`文件。
. 如果上述步骤未找到许可证文本，则构建失败。

除了全局许可证文件之外，DevKit还要求您的源文件还包含许可证标题。要将许可证标头应用于项目中的每个源文件，请在项目根目录下的命令控制台中运行以下命令，该命令包含连接器项目的`pom.xml`文件：

[source,xml, linenums]
----
mvn license:format
----

该命令遍历整个项目，并将`LICENSE_HEADER.txt`文件中定义的许可证标头应用于每个源文件。这包括Java文件，SQL脚本，XML文件等。

运行以下命令，将带有更新许可证信息的连接器安装到本地Maven存储库中。

*Important*：在运行此Maven安装命令之前运行*mvn license:format*，因为在安装之前，Maven先验证许可证标头：

[source,xml, linenums]
----
mvn clean install
----

要启用详细日志记录，请使用：

[source,xml, linenums]
----
mvn clean install -Ddevkit.verbose.logging=true
----

您还可以使用以下Maven命令来打包连接器而不是安装。这将创建一个更新站点，您可以使用该站点在Anypoint Studio中安装连接器。此更新站点包含使用Mule应用程序内部连接器（调色板，XSD，源文件等的图标）所需的所有内容。因此，在打包之前，源文件必须具有许可证标题，这一点很重要。

*Note*：打包连接器不检查源文件中的许可证标题。要打包连接器，请在根文件夹中运行以下命令：

[source,xml, linenums]
----
mvn clean package
----

== 创建压缩的项目文件

要创建项目的压缩文件：

. 在Anypoint Studio中，在包资源管理器中右键单击您的项目名称，然后单击*Export*。
. 用这些设置点击*General*> *Archive*文件。选择是否需要TAR文件（适用于Linux或Mac）或适用于Mac或Windows的ZIP文件。 （Windows用户还可以使用第三方软件（如7zip）解压缩TAR文件。）+
*Important*：取消选中*target*文件夹。 +
+
image:ArchiveFile.png[ArchiveFile]

. 点击项目名称旁边的向下箭头，然后取消选中*target*：+
+
image:ArchiveDirs.png[ArchiveDirs]

. 点击*To archive file*中的*Browse*，然后选择zip或tar文件的名称和位置。
. 点击*Finish*创建压缩文件。

用== 记录用例

释放连接器之前，请有效地记录连接器。有用的文档可以帮助减少支持和培训成本，并提高客户满意度。

文档提示：

*  *Readme*  - 提供客户可以随时访问的自述文件。最好的自述文件会在安装过程中自动出现，例如安装向导的一部分。自述文件需要包含安装信息并解释客户在安装连接器之前需要先安装或配置的所有必需软件。
*  *Use Cases*：解释客户使用连接器的原因，时间和方式。对于每个用例，请提供解释示例。有关信息，请参阅 http://en.wikipedia.org/wiki/Use_case[维基百科的用例]主题。
*  *Release Notes*：确保您的连接器具有版本，并帮助客户了解各版本之间的变化。我们建议您列出新功能，已知问题以及修复了哪些问题。


== 证明并发布您的连接器

MuleSoft的程序认证并发布第三方连接器，以便在mulesoft.org上向社区分发。有关此程序的更多信息，请mailto：connectors-certification@mulesoft.com [联系我们]。



== 将连接器上传到Exchange

Anypoint Studio通过涵盖所有版​​本连接器的*Feature ID*来识别每个连接器。为了通过 link:/anypoint-exchange[Anypoint Exchange]公开您的连接器，Exchange会提示您在上传连接器资源时提供此功能ID以及版本号。

按照以下步骤获取此ID：

. 解压缩包含连接器更新站点的文件
. 在创建的文件夹中，查找`context.xml`文件并使用文本编辑器打开它

. 在此文件中，搜索一个遵循以下模式的字符串：`id=’org.mule.tooling.ui.extension.<connector name>.feature.group’`。整个值就是连接器的功能ID。作为一个更具体的例子，你的特征ID可以是'org.mule.tooling.ui.extension.cloudhub.3.6.0.feature.group'


在同一个`context.xml`文件中，您可以在功能ID旁边找到名为*version*的标签。在Exchange中的*Connector Version*字段中提供此值。消费者以后只会看到美化和更简单的版本号。例如，如果您提供的版本号是2.0.1.201606101417，他们将只看到2.0.1。只有在编辑特定版本时才会显示完整版本号。
